Web: add handle publish report, push report to Cloudinary, download report